<resources>
    <string name="app_name">E-Commerce</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_product">Product</string>
    <string name="menu_order">Order</string>
    <string name="menu_tracking">Order Tracking</string>
    <string name="menu_help">Help</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_log_out">Log Out</string>
</resources>